ECA-7626: Add JVM options to other jobs
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@31849 37aeb1de-b14b-0410-9a0e-82b28170d228